[gd_scene load_steps=3 format=3 uid="uid://bftxrjrj0b8kn"]

[ext_resource type="Script" uid="uid://htllovge30db" path="res://Task/ReactionTimeTask/Reaction_Game.gd" id="1_41chv"]
[ext_resource type="Texture2D" uid="uid://c8otdwyxdnkjy" path="res://Task/ReactionTimeTask/Rokey-The-Blacy-The-iron-man.64.png" id="2_41chv"]

[node name="ReactionTime" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_41chv")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ReactionTimeLabel" type="Label" parent="PanelContainer"]
layout_mode = 2
text = "NaN
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OrbButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 63.0
offset_top = 39.0
offset_right = 127.0
offset_bottom = 103.0
action_mode = 0
texture_normal = ExtResource("2_41chv")

[connection signal="pressed" from="OrbButton" to="." method="_on_orb_button_pressed"]
